{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 35,
  "lineage": "66b75a61-9a67-eaa9-4647-dde55fb8b3de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs_external",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:loadbalancer/app/ttt-cluster/3c75f21add896b5a",
            "arn_suffix": "app/ttt-cluster/3c75f21add896b5a",
            "dns_name": "ttt-cluster-441938925.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:loadbalancer/app/ttt-cluster/3c75f21add896b5a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ttt-cluster",
            "security_groups": [
              "sg-09ccc38fd0945a3af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a9f3226355a3bd61"
              },
              {
                "subnet_id": "subnet-0e56d1a59b5be2e61"
              }
            ],
            "subnets": [
              "subnet-0a9f3226355a3bd61",
              "subnet-0e56d1a59b5be2e61"
            ],
            "vpc_id": "vpc-0530ffd7bdeb77e67",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.external",
            "aws_subnet.public_1",
            "aws_subnet.public_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ecs_external",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:listener/app/ttt-cluster/3c75f21add896b5a/d2c411d94f1ce05d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:targetgroup/ttt-targets/ffbacce36adb0234",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:listener/app/ttt-cluster/3c75f21add896b5a/d2c411d94f1ce05d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:loadbalancer/app/ttt-cluster/3c75f21add896b5a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.ecs_external",
            "aws_alb_target_group.ttt_external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ttt_external",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:targetgroup/ttt-targets/ffbacce36adb0234",
            "arn_suffix": "targetgroup/ttt-targets/ffbacce36adb0234",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:696665953192:targetgroup/ttt-targets/ffbacce36adb0234",
            "lambda_multi_value_headers_enabled": false,
            "name": "ttt-targets",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_alb.ecs_external",
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-040ab6293aba035d5",
            "public_dns": "ec2-34-248-102-111.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.102.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bb487df4c76dae00",
            "public_dns": "ec2-18-203-146-32.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.203.146.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-064da772dff6a5d3c",
            "owner_id": "696665953192",
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040ab6293aba035d5",
            "id": "nat-026cabff9f83dfad5",
            "network_interface_id": "eni-0a18f153a9dd8e596",
            "private_ip": "10.200.0.174",
            "public_ip": "34.248.102.111",
            "subnet_id": "subnet-0e56d1a59b5be2e61"
          },
          "depends_on": [
            "aws_eip.eip_1",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb487df4c76dae00",
            "id": "nat-0c864ee9c5c2fb56e",
            "network_interface_id": "eni-01e6a4c8e92e50df6",
            "private_ip": "10.200.2.47",
            "public_ip": "18.203.146.32",
            "subnet_id": "subnet-0a9f3226355a3bd61"
          },
          "depends_on": [
            "aws_eip.eip_2",
            "aws_subnet.public_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a288fc60fd2caabe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-026cabff9f83dfad5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a288fc60fd2caabe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7fb6092b56bfa231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0c864ee9c5c2fb56e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7fb6092b56bfa23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-064da772dff6a5d3c",
            "id": "r-rtb-0f3d151eb8867254c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3d151eb8867254c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a288fc60fd2caabe",
            "owner_id": "696665953192",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f7fb6092b56bfa23",
            "owner_id": "696665953192",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f3d151eb8867254c",
            "owner_id": "696665953192",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c5c7f9774507f95",
            "route_table_id": "rtb-0a288fc60fd2caabe",
            "subnet_id": "subnet-026fb7a758a5dcbd8"
          },
          "depends_on": [
            "aws_route_table.private_1",
            "aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abccd7a9653f83d1",
            "route_table_id": "rtb-0f7fb6092b56bfa23",
            "subnet_id": "subnet-08e76cf9314d005d2"
          },
          "depends_on": [
            "aws_route_table.private_2",
            "aws_subnet.private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01977e695397399ee",
            "route_table_id": "rtb-0f3d151eb8867254c",
            "subnet_id": "subnet-0e56d1a59b5be2e61"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf0216312f269027",
            "route_table_id": "rtb-0f3d151eb8867254c",
            "subnet_id": "subnet-0a9f3226355a3bd61"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:696665953192:security-group/sg-09ccc38fd0945a3af",
            "description": "Security group for HTTP access",
            "egress": [],
            "id": "sg-09ccc38fd0945a3af",
            "ingress": [],
            "name": "ExternalHTTPAccess",
            "name_prefix": null,
            "owner_id": "696665953192",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:696665953192:security-group/sg-013b6b1da2c3cd61a",
            "description": "Security group for internal ECS access",
            "egress": [],
            "id": "sg-013b6b1da2c3cd61a",
            "ingress": [],
            "name": "InternalECSAccess",
            "name_prefix": null,
            "owner_id": "696665953192",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "external_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2929449605",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09ccc38fd0945a3af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "external_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1461540089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ccc38fd0945a3af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2095702772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-013b6b1da2c3cd61a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-950992051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-013b6b1da2c3cd61a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:696665953192:subnet/subnet-026fb7a758a5dcbd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.200.1.0/24",
            "id": "subnet-026fb7a758a5dcbd8",
            "map_public_ip_on_launch": false,
            "owner_id": "696665953192",
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:696665953192:subnet/subnet-08e76cf9314d005d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.200.3.0/24",
            "id": "subnet-08e76cf9314d005d2",
            "map_public_ip_on_launch": false,
            "owner_id": "696665953192",
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:696665953192:subnet/subnet-0e56d1a59b5be2e61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.200.0.0/24",
            "id": "subnet-0e56d1a59b5be2e61",
            "map_public_ip_on_launch": false,
            "owner_id": "696665953192",
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:696665953192:subnet/subnet-0a9f3226355a3bd61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-0a9f3226355a3bd61",
            "map_public_ip_on_launch": false,
            "owner_id": "696665953192",
            "vpc_id": "vpc-0530ffd7bdeb77e67"
          },
          "depends_on": [
            "aws_vpc.ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:696665953192:vpc/vpc-0530ffd7bdeb77e67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-03e03d2c992a35f64",
            "default_route_table_id": "rtb-0d50759743c37c2c6",
            "default_security_group_id": "sg-006a3a19148d4a0a9",
            "dhcp_options_id": "dopt-02594307cf231bf91",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0530ffd7bdeb77e67",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d50759743c37c2c6",
            "owner_id": "696665953192"
          }
        }
      ]
    }
  ]
}